--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -67,7 +67,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.6</version>
+				<version>2.4.0</version>
 				<extensions>true</extensions>
 				<executions>
 					<execution>
@@ -81,7 +81,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Import-Package>javassist.util.proxy;version="[3.9,4)",javax.persistence;version="[1.99,3)",com.google.common.base;version="[8,13)",*</Import-Package>
+						<Import-Package>javassist.util.proxy;version="3.18.3-SNAPSHOT",javax.persistence;version="[1.99,3)",com.google.common.base;version="[8,13)",*</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
@@ -105,6 +105,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
+				<version>2.2.1</version>
 				<configuration>
 					<mavenExecutorId>forked-path</mavenExecutorId>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
@@ -116,7 +117,7 @@
 		<dependency>
 			<groupId>org.javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.18.0-GA</version>
+			<version>3.18.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
